--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "mp-wp",
   "version": "2019.05.31",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.4.1"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
